@@ -27,6 +27,7 @@
 - Changed assorted reports so they do not use '.age' format for dates that are
   in the future, because those are never shown with this format (thanks to
   Sujeevan Vijayakumaran).
+- New 'recurrence' configuration setting can disable recurring task generation.
 
 ------ current release ---------------------------
 
